#
# Copyright (c) 2017, 2021 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#

[package]
name = "zenoh-cdn"
version = "0.0.1"
repository = "https://github.com/atolab/zenoh-cdn"
homepage = "http://zenoh.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-CDN: library to build CDNs over Zenoh"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master"}
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
async-std = "=1.9.0"
futures = "0.3.12"
clap = "2"
log = "0.4"
env_logger = "0.9.0"
checksums = "0.9.0"
memmap2 = { git = "https://github.com/gabrik/memmap2-rs.git", branch = "master",  features = ["async"]}
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = {version = "0.8.13"}
sha2 = "0.9"
structopt = "0.3"

[lib]
name = "zenoh_cdn"
crate-type = ["lib"]


[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"



